--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 members = [
   "compiler/ast",
-  "compiler/codegen",
+#   "compiler/codegen",
   "compiler/driver",
   "compiler/lex",
   "compiler/parse",
@@ -9,5 +9,7 @@ members = [
   "compiler/symbol",
   "compiler/type",
   "compiler/common",
+  "compiler/ir",
+  "compiler/semantic",
 ]
 resolver = "2"
