--- a/compiler/ir/Cargo.toml
+++ b/compiler/ir/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 [dependencies]
 kaede_symbol = { path = "../symbol" }
 kaede_ir_type = { path = "../ir_type" }
+kaede_span = { path = "../span" }
