Add support for semantic analysis of impl (generic)

--- a/compiler/ir/Cargo.toml
+++ b/compiler/ir/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm17-0"] }
+
 kaede_symbol = { path = "../symbol" }
-kaede_ir_type = { path = "../ir_type" }
 kaede_span = { path = "../span" }
