--- a/compiler/ir/Cargo.toml
+++ b/compiler/ir/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 [dependencies]
 inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm17-0"] }
 
+kaede_ast_type = { path = "../ast_type" }
 kaede_symbol = { path = "../symbol" }
 kaede_span = { path = "../span" }
