--- a/compiler/semantic/Cargo.toml
+++ b/compiler/semantic/Cargo.toml
@@ -14,3 +14,6 @@ kaede_symbol = { path = "../symbol" }
 kaede_span = { path = "../span" }
 kaede_parse = { path = "../parse" }
 kaede_common = { path = "../common" }
+
+[dev-dependencies]
+tempfile = "3.8.1"
