Support for code generation from intermediate representations (Very buggy)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 members = [
   "compiler/ast",
   "compiler/ast_type",
-#   "compiler/codegen",
+  "compiler/codegen",
   "compiler/driver",
   "compiler/lex",
   "compiler/parse",
