--- a/compiler/driver/Cargo.toml
+++ b/compiler/driver/Cargo.toml
@@ -16,6 +16,7 @@ kaede_ast = { path = "../ast" }
 kaede_codegen = { path = "../codegen" }
 kaede_parse = { path = "../parse" }
 kaede_common = { path = "../common" }
+kaede_semantic = { path = "../semantic" }
 
 [dev-dependencies]
 assert_fs = "1.0.12"
