feat: implement the basic framework of the inference mechanism

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ members = [
   "compiler/common",
   "compiler/ir",
   "compiler/semantic",
+  "compiler/type_infer", "compiler/symbol_table",
 ]
 resolver = "2"
