--- a/compiler/semantic/Cargo.toml
+++ b/compiler/semantic/Cargo.toml
@@ -14,6 +14,8 @@ kaede_symbol = { path = "../symbol" }
 kaede_span = { path = "../span" }
 kaede_parse = { path = "../parse" }
 kaede_common = { path = "../common" }
+kaede_symbol_table = { path = "../symbol_table" }
+kaede_type_infer = { path = "../type_infer" }
 
 [dev-dependencies]
 tempfile = "3.8.1"
