--- a/compiler/parse/Cargo.toml
+++ b/compiler/parse/Cargo.toml
@@ -14,3 +14,4 @@ kaede_ast = { path = "../ast" }
 kaede_span = { path = "../span" }
 kaede_ast_type = { path = "../ast_type" }
 kaede_symbol = { path = "../symbol" }
+kaede_type_infer = { path = "../type_infer" }
