--- a/example/kaede-rust-bridge-examplea/rust/Cargo.toml
+++ b/example/kaede-rust-bridge-examplea/rust/Cargo.toml
@@ -11,6 +11,6 @@ reqwest = { version = "0.12", features = ["blocking"] }
 tokio = { version = "1", features = ["full"] }
 
 [build-dependencies]
-kaede-rust-bridge-codegen = { path = "../../../library/kaede-rust-bridge-codegen" }
+kaede-rust-bridge-codegen = { path = "/home/user/.kaede/kaede-rust-bridge-codegen" }
 
 [workspace]
