--- a/compiler/ir/Cargo.toml
+++ b/compiler/ir/Cargo.toml
@@ -9,3 +9,4 @@ inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", feat
 kaede_ast_type = { path = "../ast_type" }
 kaede_symbol = { path = "../symbol" }
 kaede_span = { path = "../span" }
+kaede_common = { path = "../common" }
