--- a/compiler/driver/Cargo.toml
+++ b/compiler/driver/Cargo.toml
@@ -11,12 +11,14 @@ anyhow = { version = "1.0.68", features = ["backtrace"] }
 clap = { version = "4.1.4", features = ["derive"] }
 colored = "2.0.4"
 tempfile = "3.5.0"
+tokio = { version = "=1.32.0", features = ["io-std", "net", "rt-multi-thread", "time"] }
 
 kaede_ast = { path = "../ast" }
 kaede_codegen = { path = "../codegen" }
 kaede_parse = { path = "../parse" }
 kaede_common = { path = "../common" }
 kaede_semantic = { path = "../semantic" }
+kaede_lsp = { path = "../lsp" }
 
 [dev-dependencies]
 assert_fs = "1.0.12"
