feat(codegen): run tests via AOT executable harness
- Remove JIT execution in codegen tests and compile via llc + cc
- Add C harness to run kdmain through runtime and print exit code
- Add tempfile dev-dependency for temp build artifacts

--- a/compiler/codegen/Cargo.toml
+++ b/compiler/codegen/Cargo.toml
@@ -16,3 +16,6 @@ kaede_parse = { path = "../parse" }
 kaede_symbol = { path = "../symbol" }
 kaede_common = { path = "../common" }
 kaede_semantic = { path = "../semantic" }
+
+[dev-dependencies]
+tempfile = "3"
