refactor: add monomorphize pass for generic call normalization

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ members = [
   "compiler/ir",
   "compiler/lsp",
   "compiler/semantic",
+  "compiler/monomorphize",
   "compiler/type_infer",
   "compiler/symbol_table",
 ]
