--- a/compiler/type_infer/Cargo.toml
+++ b/compiler/type_infer/Cargo.toml
@@ -11,3 +11,6 @@ kaede_span = { path = "../span" }
 kaede_ir = { path = "../ir" }
 kaede_symbol = { path = "../symbol" }
 kaede_symbol_table = { path = "../symbol_table" }
+
+[dev-dependencies]
+kaede_common = { path = "../common" }
